GH-39 Return the ccreated field definitions.
